--- a/Chkqu.html
+++ b/Chkqu.html
@@ -51,7 +51,7 @@
             <h1 >Check Fruit Quality</h1>
 
             <div class="card" style="width: 55rem;" data-aos="zoom-in" id="maincard">
-                <img src="/images/test_image.jpg" class="card-img-top" alt="...">
+                <img src="fqb/images/test_image.jpg" class="card-img-top" alt="...">
                 
                 <div class="card-body">
                     <h5 class="card-title">Upload Image</h5>
