--- a/About.html
+++ b/About.html
@@ -47,13 +47,13 @@
 
           <div class="text-centert text-wrap bg-image" id="aboutp">
                 <div class="card-body">
-                    <p>This project presents the recent development in automatic vision based technology. Use of this technology
+                    <p><b>This project presents the recent development in automatic vision based technology. Use of this technology
                         is increasing in agriculture and fruit industry. An automatic fruit quality detection system for sorting
                         and grading of fruits and defected fruit detection discussed here. The main aim of this system is to
                         replace the manual inspection system. This helps in speed up the process improve accuracy and efficiency
                         and reduce time.
                         Then image processing is done to get required features of fruits such as color and size. Defected fruit
-                        is detected based on image pixels. Sorting is done based on color and size.
+                        is detected based on image pixels. Sorting is done based on color and size.</b>
                     </p>
                     <br>
                 </div>
